# libccdav

./: .travis.yml  CMakeLists.txt  ccdav.pri
lib/: CMakeLists.txt  CalDAV.cpp  CalDAV.hpp  CardDAV.cpp
lib/dto/: CardDAVResponseItem.hpp  Contact.cpp  Contact.hpp
lib/tests/: CMakeLists.txt  TestCardDAV.cpp
lib/utils/: CardDAVReply.cpp  CardDAVReply.hpp  NetworkHelper.cpp  NetworkHelper.hpp  XMLHelper.cpp  XMLHelper.hpp
